Sun Mar 22 16:04:00 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.[ch]: Added gnome_stock_menu_accel

	* stock_demo.c: Use gnome_stock_menu_accel. Include GnomePropertyBox
	sample.

Sun Mar 22 10:26:09 1998  Radek Doulik  <rodo@aquarius>

	* gnome-propertybox.c (just_close): send delete_event to property
	box instead of widget_destroy

Sun Mar 22 00:07:06 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-propertybox.c (global_apply): Emit apply signal with page
	number of -1 after all pages applied.

Sat Mar 21 00:45:10 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-properties.c (apply_page): New function.
	(gnome_property_configurator_setup): Connect apply_page to "apply"
	signal on property box.
	(gnome_property_configurator_request): Removed.

	* gnome-properties.h (GnomePropertyConfigurator): Replaced
	notebook with property_box.

	* gnome-propertybox.c (gnome_property_box_new): Actually pack
	widgets into frame.
	(gnome_property_box_init): Initalize `items'.

	* libgnomeui.h: Include gnome-propertybox.h.
	* gnome-propertybox.h: New file.
	* gnome-propertybox.c: New file.
	* Makefile.am (libgnomeui_la_SOURCES): Added gnome-propertybox.c.
	(libgnomeuiinclude_HEADERS): Added gnome-propertybox.h.

	* gnome-messagebox.c: Changed all names from gnome_messagebox_* to
	gnome_message_box_*.  The latter mathches Gtk style, and works
	better with gnome.defs/gen-typeinfo.

	Somewhat modified patch from Havoc Pennington:
	* gnome-messagebox.c (gnome_messagebox_new): Initialize buttons
	element to NULL, not to a new list.  Call va_end.
	(gnome_messagebox_set_default): Use g_list_nth.
	(gnome_messagebox_button_clicked): Now static.

Fri Mar 20 23:02:46 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-messagebox.c (gnome_messagebox_new): Use
	gnome_stock_or_ordinary_button.

	* gnome-stock.h (gnome_stock_or_ordinary_button): Declare.
	Updated copyright.
	* gnome-stock.c (stock_button_from_entry): New function.
	(gnome_stock_button): Use it.